--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 encoding: utf-8
 
 # SEO相关信息
-title: TMaize Blog
-description: TMaize的个人博客
-keywords: TMaize,Blog,Java,Html,JavaScript
-author: TMaize
-footerText: 'Copyright © 2016 皖ICP备16016174号'
+title: wuko blog
+description: 无空的个人博客
+keywords: wuko,wuko233,Arair237,灵冰M无
+author: wuko
+footerText: 'Copyright © 2021'
 
 # 这些不要动
 permalink: /posts/:year/:month/:day/:title.html
