--- a/_config.yml
+++ b/_config.yml
@@ -57,35 +57,12 @@ extMath: false
 
 # 友情链接
 links:
-  - title: 文科中的技术宅
-    url: https://www.townwang.com
-  - title: Auuu Nya Blog
-    url: http://mu1er.cn
-  - title: 春风十里
-    url: https://www.geek-era.com
-  - title: 阿川的个人博客
-    url: https://achuan.io
-  - title: 魏文成博客
-    url: https://www.wwc.ren
-  - title: 06m
-    url: https://www.06m.me
-  - title: 达达知识
-    url: https://www.dadapush.com
-  - title: 祈雨的博客
-    url: https://wakzz.cn
-  - title: hongCYu’s Blog
-    url: https://hongcyu.cn
-  - title: Sorryfu
-    url: https://fushaolei.github.io
-  - title: 简单的人生笔记
-    url: https://yoyling.com
-  - title: oneNeko的博客
-    url: https://blog.oneneko.com
-  - title: Py的Blogggg
-    url: https://blog.pyliubaolin.top
-  - title: Yuyao's Blog
-    url: http://hellocode.ink
-  - title: 木叶的博客
-    url: https://muye.ml
-  - title: Stansec
-    url: https://standeblog.com/
+<img src="http://ops.dgsrz.com/assets/img/logo.png" width="200px" />
+
+**osu!droid**:[_Arair237_](http://ops.dgsrz.com/profile.php?uid=262756)
+
+----
+<img sizes="180x180" src="https://osu.ppy.sh/apple-touch-icon.png">
+
+**OSU!**:[_Arair237_](https://osu.ppy.sh/users/19273483)
+
