--- a/_config.yml
+++ b/_config.yml
@@ -33,8 +33,8 @@ menu:
     url: /pages/search.html
   - title: 友链
     url: /pages/links.html
-  - title: 留言
-    url: /pages/about.html
+  - title: 捐赠
+    url: /pages/money.html
   - title: 关于
     url: /pages/about.html
 
