--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 encoding: utf-8
 
 # SEO相关信息
-title: wuko blog
+title: wuko's blog
 description: 无空的个人博客
-keywords: wuko,wuko233,Arair237,灵冰M无,无空,无空的博客
+keywords: wuko,wuko233,Arair237,无空,无空的博客
 author: wuko
-footerText: 'Copyright © 2020 - 2022 wuko blog'
+footerText: 'Copyright © 2020 - 2023 wuko.top'
 
 # 这些不要动
 permalink: /posts/:year/:month/:day/:title.html
