--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 encoding: utf-8
 
 # SEO相关信息
-title: wuko's blog
-description: 无空的个人博客
+title: wuko's blog - 分享所见所想，力求共同进步！
+description: 无空的个人博客，分享个人所见所想，力求共同进步。欢迎访问！又名：wuko233/Arair237的博客。 
 keywords: wuko,wuko233,Arair237,无空,无空的博客
 author: wuko
 footerText: 'Copyright © 2020 - 2023 wuko.top'
